--- a/about_me.html
+++ b/about_me.html
@@ -25,32 +25,12 @@
 		}
 
 		a {
-			color: #004080;
-			text-decoration: none;
+			color: #004080
 		}
 
-		a:hover {
-			text-decoration: underline;
-		}
-
-		img.food {
-			float: left;
-			margin-right: 15px;
-			max-width: 200px;
-		}
-
-		table {
-			width: 100%;
-			border-collapse: collapse;
-			margin-top: 30px;
-			background-color: #eaf3fb;
-		}
+		table {background-color: #eaf3fb}
 
 		th, td {
-			border: 1px solid #ccc;
-			padding: 10px;
-			vertical-align: top;
-			text-align: left;
 			color: #336699;
 			background-color: #eaf3fb;
 		}
@@ -85,17 +65,16 @@
 	</p>
 
 	<h2>Favorite Food</h2>
-	<img src="images/sushi.jpg" class="food">
+	<img src="images/sushi.jpg" align="left" width="200">
 	<p>
 		My favorite food is sushi, specifically spicy tuna rolls and tamago nigiri.
 		When I prepare it myself, I like to make the rolls small rather than thick and enjoy trying to make it inside-out style with the rice on the outside.
 		I eat it with lots of soy sauce and sometimes spicy mayo.
 	</p>
-
 	<br clear="all" />
 
 	<h2>My Favorite Books</h2>
-	<table>
+	<table border="1" cellpadding="4" cellspacing="5">
 		<tr>
 			<th>Book Name</th>
 			<th>Cover</th>
